--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
   <header>
-    <h1>In Loving Memory of Jimmy &#128147 &#128054</h1>
+    <h1 style="font-family: Garamond";>In Loving Memory of Jimmy &#128147 &#128054</h1>
   </header>
   
   <div id="content">
