--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Georgia, 'Times New Roman', Times, serif;
       margin: 0;
       padding: 0;
     }
@@ -89,7 +89,7 @@
 </head>
 <body>
   <header>
-    <h1 style="font-family: Garamond";>In Loving Memory of Jimmy &#128147 &#128054</h1>
+    <h1 style="font-family: Garamond;">In Loving Memory of Jimmy &#128147 &#128054</h1>
   </header>
   
   <div id="content">
